<resources>
    <string name="app_name">Fisika Unpad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fisika Unpad</string>
    <string name="nav_header_subtitle">kadep@phys.unpad.ac.id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pengelola">Pengelola dan Dosen</string>
    <string name="menu_kurikulum">Kurikulum</string>
    <string name="menu_lulusan">Profil Lulusan</string>
    <string name="menu_fasilitas">Fasilitas</string>
</resources>